# MLOps

./: .gitignore  README.md  main.py
MLOPS_Project/: HOW_TO_RUN.md  README.md  mlflow.db  pyproject.toml
MLOPS_Project/kedro-carprice-prediction/: .gitignore  Dockerfile  README.md  deployment_prefect.py  kedro_prefect_flow.py  pyproject.toml
MLOPS_Project/kedro-carprice-prediction/conf/base/: catalog.yml  parameters.yml  parameters_data_drifts.yml  parameters_model_predict.yml  parameters_model_train.yml  parameters_preprocess_batch.yml  parameters_preprocess_train.yml  parameters_split_train.yml
MLOPS_Project/kedro-carprice-prediction/data/05_model_input/: car_price_model_input.parquet
MLOPS_Project/kedro-carprice-prediction/docs/source/: index.rst
MLOPS_Project/kedro-carprice-prediction/notebooks/: 01_Data_Unit_Tests_CarPrice.ipynb
MLOPS_Project/kedro-carprice-prediction/src/kedro_carprice_prediction/: __init__.py  __main__.py  fuzzy_matching.py  pipeline_registry.py  run_kedro_pipeline.py  settings.py
MLOPS_Project/kedro-carprice-prediction/tests/pipelines/model_predict/: test_pipeline.py
MLOPS_Project/serving/: Dockerfile  README.md  requirements.txt
MLOPS_Project/serving/app/: encode.py  history.py  main.py  model_loader.py  preprocess.py
MLOPS_Project/serving/artifacts/: .gitkeep  imputation_stats.pkl  preprocessing_artifacts.pkl
MLOPS_Project/serving/k8s/: deployment.yml  hpa.yml  kind.yml  service.yml  setup-kind.ps1
MLOPS_Project/serving/postman/: Car-Price-API.postman_collection.json  Local.postman_environment.json
(+71 files in other folders)
